# AegisMedBot

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
agents/: agent_protocol.py  base_agent.py
agents/clinical_agent/: __init__.py  clinical_agent.py  prompts.py
agents/compliance_agent/: __init__.py  audit_logger.py  phi_detector.py  privacy_guardian.py
agents/director_agent/: __init__.py  director_intelligence.py  kpi_analyzer.py  report_generator.py
agents/operations_agent/: __init__.py  bed_analyzer.py  flow_predictor.py  operations_agent.py
agents/orchestrator/: __init__.py  agent_orchestrator.py  context_manager.py  task_delegator.py
agents/research_agent/: __init__.py  literature_retriever.py  paper_summarizer.py  research_assistant.py
agents/risk_agent/: __init__.py  features.py  risk_predictor.py
backend/: main.py  requirements.txt
backend/api/: __init__.py  dependencies.py
backend/core/: cache.py  config.py  database.py  security.py
backend/models/: enums.py
backend/services/: audit_service.py  auth_service.py  notification_service.py
database/: alembic.ini
database/migrations/: env.py
database/models/: admission.py  patient.py  resource.py  staff.py  treatment.py
database/repositories/: admission_repo.py  audit_repo.py  patient_repo.py
docker/: docker-compose.yml
docker/agents/: Dockerfile
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
docker/nginx/: nginx.conf
docker/rag/: Dockerfile
docs/api/: openapi.yaml
docs/architecture/: agent_design.txt  data_flow.txt  overview.txt
frontend/: app.py  requirements.txt
inference/: __init__.py  cache.py  engine.py  optimizations.py
ml_training/: requirements.txt
rag_system/: __init__.py
scripts/setup/: init_db.py  (+1 more)
(+87 files in other folders)
